--- a/src/styles/components/_panes.scss
+++ b/src/styles/components/_panes.scss
@@ -13,6 +13,8 @@
 
 .sub-pane-text {
     height: 100%;
+    font-family: 'Lato';
+    font-size: 1.15rem;
     display: flex;
     align-items: center;
     width: 50%;
