--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,7 +1,14 @@
 .toggle-btn {
-    width: 100%;
-    height: 100%;
+    float: right;
+    height: 2rem;
+    margin-top: 0.35rem;
+    margin-right: 1.5rem;
     background-color: palevioletred;
     color: white;
+    cursor: pointer;
+    font-family: 'Lato';
     border: 0;
+    -webkit-box-shadow: 3px 3px 2px 0px rgba(143,143,143,0.75);
+    -moz-box-shadow: 3px 3px 2px 0px rgba(143,143,143,0.75);
+    box-shadow: 3px 3px 2px 0px rgba(143,143,143,0.75);
 }
